[tool.poetry]
name = "llm-pilot"
version = "0.1.0"
description = ""
authors = ["curtis-lu <pclu79@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_pilot"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.0.312"
markdown = "^3.5"
chromadb = "^0.4.14"
tiktoken = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
